tests/snapshots/05_scopes_and_captures__deep_scope_shadowing.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/05_scopes_and_captures/deep_scope_shadowing.lam
---
b b

term
  nodes: 12
  depth: 8

eval
  steps:    3
  reduces:  3
  allocs:   5
  time:     [time]
