tests/snapshots/05_scopes_and_captures__nested_capture_avoidance.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/05_scopes_and_captures/nested_capture_avoidance.lam
---
λy. x

term
  nodes: 10
  depth: 6

eval
  steps:    2
  reduces:  2
  allocs:   5
  time:     [time]
