tests/snapshots/05_scopes_and_captures__shadowing.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/05_scopes_and_captures/shadowing.lam
---
a

term
  nodes: 7
  depth: 5

eval
  steps:    2
  reduces:  2
  allocs:   1
  time:     [time]
