tests/snapshots/05_scopes_and_captures__swap_variables.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/05_scopes_and_captures/swap_variables.lam
---
b a

term
  nodes: 9
  depth: 6

eval
  steps:    2
  reduces:  2
  allocs:   1
  time:     [time]
